// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button Basic usage 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button adds target if passed via attributes 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             url="http://pega.com"
             target="_blank"
>
  <a href="http://pega.com"
     target="_blank"
     class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
     is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </a>
</bolt-button>
`;

exports[`button Button tag: a 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button tag: button 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button tag: link 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button tag: reset 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="reset"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button tag: submit 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="submit"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button type: button 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="button"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button type: reset 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="reset"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button type: submit 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="submit"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button with "disabled" adds attr to <a> 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             url="http://pega.com"
             disabled
>
  <a aria-disabled="true"
     class="c-bolt-button c-bolt-button--disabled c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
     is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </a>
</bolt-button>
`;

exports[`button Button with "disabled" adds attr to <a> 2`] = `
<a
  aria-disabled="true"
  class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--disabled"
  is="shadow-root"
  style=""
>
  <!---->
  
        
  <!---->
  
            
  <span
    class="c-bolt-button__item"
    style=""
  >
    <!---->
    <slot
      style=""
    />
    <!---->
  </span>
  
          
  <!---->
  
      
  <!---->
</a>
`;

exports[`button Button with "disabled" adds attr to <button> 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             disabled
>
  <button disabled
          class="c-bolt-button c-bolt-button--disabled c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      This is a button
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button with "disabled" adds attr to <button> 2`] = `
<button
  class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--disabled"
  disabled=""
  style=""
>
  
          
        
  <!---->
  
            
  <span
    class="c-bolt-button__item"
    style=""
  >
    <!---->
    <slot
      style=""
    />
    <!---->
  </span>
  
          
  <!---->
  
      
        
</button>
`;

exports[`button Button with an onClick attributes renders properly 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             on-click="on-click-test"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      Button w/ onClick via attributes
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button with an onClick param renders properly 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             on-click="on-click-test"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      Button with onClick via param
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button with c-bolt- class is thrown out 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      Button with outer JS-prefixed class
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button with inner classes via Drupal Attributes 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center is-active"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      Button with inner classes
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button with outer JS-class via Drupal Attributes 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             class="js-click-me"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      Button with outer JS-prefixed class
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Button with outer classes via Drupal Attributes 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             class="u-bolt-padding-medium"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <ssr-keep for="bolt-button"
              class="c-bolt-button__item"
    >
      Button with outer classes
    </ssr-keep>
  </button>
</bolt-button>
`;

exports[`button Default <bolt-button> w/o Shadow DOM renders 2`] = `
<bolt-button
  no-shadow=""
  style=""
>
  <!---->
  
      
        
  <button
    class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
    style=""
  >
    
          
        
    <!---->
    
            
    <span
      class="c-bolt-button__item"
      style=""
    >
      <!---->
      <!---->
      This is a button
      <!---->
      <!---->
    </span>
    
          
    <!---->
    
      
        
  </button>
  
      
    
  <!---->
</bolt-button>
`;

exports[`button Default <bolt-button> with Shadow DOM renders 2`] = `
<button
  class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
  style=""
>
  
          
        
  <!---->
  
            
  <span
    class="c-bolt-button__item"
    style=""
  >
    <!---->
    <slot
      style=""
    />
    <!---->
  </span>
  
          
  <!---->
  
      
        
</button>
`;

exports[`button Default <bolt-button> with Shadow DOM renders 3`] = `
<bolt-button
  style=""
>
  Button Test -- Outer HTML
</bolt-button>
`;

exports[`button Inline button inside a container with defined text alignment. 1`] = `
<div class="o-bolt-grid o-bolt-grid--flex o-bolt-grid--matrix">
  <div class="o-bolt-grid__cell u-bolt-width-12/12 u-bolt-text-align-right">
    <bolt-button size="medium"
                 color="primary"
                 width="auto"
                 border-radius="regular"
                 align="center"
                 transform="none"
    >
      <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
              is="shadow-root"
      >
        <ssr-keep for="bolt-button"
                  class="c-bolt-button__item"
        >
          Align right
        </ssr-keep>
      </button>
    </bolt-button>
  </div>
  <div class="o-bolt-grid__cell u-bolt-width-12/12 u-bolt-text-align-center">
    <bolt-button size="medium"
                 color="primary"
                 width="auto"
                 border-radius="regular"
                 align="center"
                 transform="none"
    >
      <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
              is="shadow-root"
      >
        <ssr-keep for="bolt-button"
                  class="c-bolt-button__item"
        >
          Align center
        </ssr-keep>
      </button>
    </bolt-button>
  </div>
  <div class="o-bolt-grid__cell u-bolt-width-12/12 u-bolt-text-align-left">
    <bolt-button size="medium"
                 color="primary"
                 width="auto"
                 border-radius="regular"
                 align="center"
                 transform="none"
    >
      <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
              is="shadow-root"
      >
        <ssr-keep for="bolt-button"
                  class="c-bolt-button__item"
        >
          Align left
        </ssr-keep>
      </button>
    </bolt-button>
  </div>
</div>
`;
